--- a/examples/use-cases/instruments/FX Option Vanilla Risk Ladders.ipynb
+++ b/examples/use-cases/instruments/FX Option Vanilla Risk Ladders.ipynb
@@ -2586,6 +2586,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_result1d(df: pd.DataFrame, result_column: str):\n",
+    "    delta = '\\u0394'\n",
+    "    pd.set_option('display.max_colwidth', 200)\n",
+    "    fig, axs = plt.subplots(1, 2, figsize = (10, 5))\n",
+    "    display(valuation[[\"ValuationDate\", \"InstrumentName\", \"Present Value\", result_column]])\n",
+    "    print(valuation[result_column].keys())\n",
+    "\n",
+    "    # def plot_row(ax, row: pd.Series, *args: list[str]):\n",
+    "    #     for a in args:\n",
+    "    #         val_EUR: Result1D = row[result_column][f\"Rates:{a}.{a}OIS\"]\n",
+    "    #         ax.plot(val_EUR.values.keys(), val_EUR.values.values(), label = f\"{a}.{a}OIS\")\n",
+    "    #     ax.set_title(row[\"InstrumentName\"])\n",
+    "    #     ax.set_xlabel(f\"{delta} Rate\")\n",
+    "    #     ax.set_ylabel(f\"{delta} PV\")\n",
+    "\n",
+    "\n",
+    "    # for i, row in valuation[[\"ValuationDate\", \"InstrumentName\", \"Present Value\", \"Risk/Rates/Difference/Ladder\"]].iterrows():\n",
+    "    #     plot_row(axs[i], row, \"EUR\", \"USD\")\n",
+    "    # plt.legend()"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -2826,12 +2853,101 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "instruments_api.get_instruments()"
+    "### Parallel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ValuationDate</th>\n",
+       "      <th>InstrumentName</th>\n",
+       "      <th>Present Value</th>\n",
+       "      <th>Risk/FxVol/Delta/Central/Parallel</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2021-01-20 00:00:00+00:00</td>\n",
+       "      <td>EUR/USD FX Option 03/31/2021 1.205</td>\n",
+       "      <td>21,609.7001</td>\n",
+       "      <td>{'FxVol:EUR.USD.LN': (0.0, [])}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2021-01-20 00:00:00+00:00</td>\n",
+       "      <td>EUR/USD FX Option 02/24/2022 1.19</td>\n",
+       "      <td>-34,695.4263</td>\n",
+       "      <td>{'FxVol:EUR.USD.LN': (-78.8754167313, [])}</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              ValuationDate                      InstrumentName  \\\n",
+       "0 2021-01-20 00:00:00+00:00  EUR/USD FX Option 03/31/2021 1.205   \n",
+       "1 2021-01-20 00:00:00+00:00   EUR/USD FX Option 02/24/2022 1.19   \n",
+       "\n",
+       "   Present Value           Risk/FxVol/Delta/Central/Parallel  \n",
+       "0    21,609.7001             {'FxVol:EUR.USD.LN': (0.0, [])}  \n",
+       "1   -34,695.4263  {'FxVol:EUR.USD.LN': (-78.8754167313, [])}  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1600x1600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "delta = '\\u0394'\n",
+    "pd.set_option('display.max_colwidth', 200)\n",
+    "fig = plt.figure(figsize=(16,16))\n",
+    "column = \"Risk/FxVol/Delta/Central/Parallel\"\n",
+    "display(valuation[[\"ValuationDate\", \"InstrumentName\", \"Present Value\", column]])  # FxVol:EUR.USD.LN"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pointwise"
    ]
   },
   {
