--- a/examples/use-cases/instruments/FX Option Vanilla Risk Ladders.ipynb
+++ b/examples/use-cases/instruments/FX Option Vanilla Risk Ladders.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 414,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -101,8 +101,7 @@
     "display(HTML(\"<style>.container { width:90% !important; }</style>\"))\n",
     "\n",
     "# Set the secrets path\n",
-    "# secrets_path = os.getenv(\"FBN_SECRETS_PATH\")\n",
-    "secrets_path = os.getenv(\"FBN_SECRET_CALCULATION\")\n",
+    "secrets_path = os.getenv(\"FBN_SECRETS_PATH\")\n",
     "\n",
     "# For running the notebook locally\n",
     "if secrets_path is None:\n",
@@ -119,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 415,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -139,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 416,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -165,14 +164,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 417,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"name\":\"PropertyAlreadyExists\",\"errorDetails\":[],\"code\":124,\"type\":\"https://docs.lusid.com/#section/Error-Codes/124\",\"title\":\"Error creating Property Definition 'Transaction/ibor-optrl/DealId' because it already exists.\",\"status\":400,\"detail\":\"Error creating Property Definition 'Transaction/ibor-optrl/DealId' because it already exists.\",\"instance\":\"https://calculation.lusid.com/app/insights/logs/0HMRCRLUP1SRH:00000009\",\"extensions\":{}}\n"
+      "{\"name\":\"PropertyAlreadyExists\",\"errorDetails\":[],\"code\":124,\"type\":\"https://docs.lusid.com/#section/Error-Codes/124\",\"title\":\"Error creating Property Definition 'Transaction/ibor-optrl/DealId' because it already exists.\",\"status\":400,\"detail\":\"Error creating Property Definition 'Transaction/ibor-optrl/DealId' because it already exists.\",\"instance\":\"https://calculation.lusid.com/app/insights/logs/0HMRCRLOTQLRK:000000DC\",\"extensions\":{}}\n"
      ]
     }
    ],
@@ -207,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 418,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -218,7 +217,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"name\":\"PortfolioWithIdAlreadyExists\",\"errorDetails\":[],\"code\":112,\"type\":\"https://docs.lusid.com/#section/Error-Codes/112\",\"title\":\"Could not create a portfolio with id 'fxOptionRisk' because it already exists in scope 'ibor-optrl'.\",\"status\":400,\"detail\":\"Error creating portfolio with id 'fxOptionRisk' in scope 'ibor-optrl' effective at 2010-01-01T00:00:00.0000000+00:00 because it already exists.\",\"instance\":\"https://calculation.lusid.com/app/insights/logs/0HMRCRM2SLDTU:00000058\",\"extensions\":{}}\n"
+      "{\"name\":\"PortfolioWithIdAlreadyExists\",\"errorDetails\":[],\"code\":112,\"type\":\"https://docs.lusid.com/#section/Error-Codes/112\",\"title\":\"Could not create a portfolio with id 'fxOptionRisk' because it already exists in scope 'ibor-optrl'.\",\"status\":400,\"detail\":\"Error creating portfolio with id 'fxOptionRisk' in scope 'ibor-optrl' effective at 2010-01-01T00:00:00.0000000+00:00 because it already exists.\",\"instance\":\"https://calculation.lusid.com/app/insights/logs/0HMRCRLOTQLRK:000000DD\",\"extensions\":{}}\n"
      ]
     }
    ],
@@ -255,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 419,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -327,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": 420,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
+   "execution_count": 421,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 384,
+   "execution_count": 422,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -484,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 423,
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 386,
+   "execution_count": 424,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -635,7 +634,7 @@
        "4 2021-01-07 00:00:00+00:00 1.2272  EUR/USD"
       ]
      },
-     "execution_count": 386,
+     "execution_count": 424,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -650,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 387,
+   "execution_count": 425,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -711,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 388,
+   "execution_count": 426,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -945,7 +944,7 @@
        "9  0.1145     1.1850     1.2000     1.2150  "
       ]
      },
-     "execution_count": 388,
+     "execution_count": 426,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -960,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 389,
+   "execution_count": 427,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1011,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 390,
+   "execution_count": 428,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1053,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": 429,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1100,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 430,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1166,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 393,
+   "execution_count": 431,
    "metadata": {},
    "outputs": [
     {
@@ -1222,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 432,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1257,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 395,
+   "execution_count": 433,
    "metadata": {},
    "outputs": [
     {
@@ -1291,7 +1290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 396,
+   "execution_count": 434,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1343,7 +1342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 397,
+   "execution_count": 435,
    "metadata": {},
    "outputs": [
     {
@@ -1371,14 +1370,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 398,
+   "execution_count": 436,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Configuration recipe loaded into LUSID at time 2023-06-14 14:58:31.312198+00:00.\n"
+      "Configuration recipe loaded into LUSID at time 2023-06-14 15:01:43.401144+00:00.\n"
      ]
     }
    ],
@@ -1461,7 +1460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 399,
+   "execution_count": 437,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1519,7 +1518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 400,
+   "execution_count": 438,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1556,7 +1555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 401,
+   "execution_count": 439,
    "metadata": {},
    "outputs": [
     {
@@ -1873,7 +1872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 402,
+   "execution_count": 440,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1940,7 +1939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 403,
+   "execution_count": 441,
    "metadata": {},
    "outputs": [
     {
@@ -1990,9 +1989,9 @@
        "      <td>21,609.7001</td>\n",
        "      <td>0.5643</td>\n",
        "      <td>fxOptionRisk</td>\n",
-       "      <td>{'Fx:EUR.USD': ({'EUR': 44.9402174617, 'USD': -44.8889820295}, [])}</td>\n",
-       "      <td>{'Fx:EUR.USD': ({'EUR': 44.8889820295, 'USD': -44.9402174617}, [])}</td>\n",
-       "      <td>{'Fx:EUR.USD': ({'EUR': 44.9145997456, 'USD': -44.9145997456}, [])}</td>\n",
+       "      <td>{'Fx:EUR.USD': ({'USD': -65.7617105353, 'EUR': 65.8876936709}, [])}</td>\n",
+       "      <td>{'Fx:EUR.USD': ({'USD': -65.8876936709, 'EUR': 65.7617105353}, [])}</td>\n",
+       "      <td>{'Fx:EUR.USD': ({'USD': -65.8247021031, 'EUR': 65.8247021031}, [])}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -2005,9 +2004,9 @@
        "      <td>-34,695.4263</td>\n",
        "      <td>-0.3754</td>\n",
        "      <td>fxOptionRisk</td>\n",
-       "      <td>{'Fx:EUR.USD': ({'EUR': 34.2031833404, 'USD': -34.2299810649}, [])}</td>\n",
-       "      <td>{'Fx:EUR.USD': ({'EUR': 34.2299810649, 'USD': -34.2031833404}, [])}</td>\n",
-       "      <td>{'Fx:EUR.USD': ({'EUR': 34.21658220265, 'USD': -34.21658220265}, [])}</td>\n",
+       "      <td>{'Fx:EUR.USD': ({'USD': -50.1688980558, 'EUR': 50.1234821305}, [])}</td>\n",
+       "      <td>{'Fx:EUR.USD': ({'USD': -50.1234821305, 'EUR': 50.1688980558}, [])}</td>\n",
+       "      <td>{'Fx:EUR.USD': ({'USD': -50.14619009315, 'EUR': 50.14619009315}, [])}</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2027,16 +2026,16 @@
        "1   -34,695.4263 -0.3754  fxOptionRisk   \n",
        "\n",
        "                                       Risk/Fx/Delta/Forward/PointWise  \\\n",
-       "0  {'Fx:EUR.USD': ({'EUR': 44.9402174617, 'USD': -44.8889820295}, [])}   \n",
-       "1  {'Fx:EUR.USD': ({'EUR': 34.2031833404, 'USD': -34.2299810649}, [])}   \n",
+       "0  {'Fx:EUR.USD': ({'USD': -65.7617105353, 'EUR': 65.8876936709}, [])}   \n",
+       "1  {'Fx:EUR.USD': ({'USD': -50.1688980558, 'EUR': 50.1234821305}, [])}   \n",
        "\n",
        "                                      Risk/Fx/Delta/Backward/PointWise  \\\n",
-       "0  {'Fx:EUR.USD': ({'EUR': 44.8889820295, 'USD': -44.9402174617}, [])}   \n",
-       "1  {'Fx:EUR.USD': ({'EUR': 34.2299810649, 'USD': -34.2031833404}, [])}   \n",
+       "0  {'Fx:EUR.USD': ({'USD': -65.8876936709, 'EUR': 65.7617105353}, [])}   \n",
+       "1  {'Fx:EUR.USD': ({'USD': -50.1234821305, 'EUR': 50.1688980558}, [])}   \n",
        "\n",
        "                                         Risk/Fx/Delta/Central/PointWise  \n",
-       "0    {'Fx:EUR.USD': ({'EUR': 44.9145997456, 'USD': -44.9145997456}, [])}  \n",
-       "1  {'Fx:EUR.USD': ({'EUR': 34.21658220265, 'USD': -34.21658220265}, [])}  "
+       "0    {'Fx:EUR.USD': ({'USD': -65.8247021031, 'EUR': 65.8247021031}, [])}  \n",
+       "1  {'Fx:EUR.USD': ({'USD': -50.14619009315, 'EUR': 50.14619009315}, [])}  "
       ]
      },
      "metadata": {},
@@ -2059,7 +2058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 404,
+   "execution_count": 442,
    "metadata": {},
    "outputs": [
     {
@@ -2150,10 +2149,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x29038a080>"
+       "<matplotlib.legend.Legend at 0x15e5c9960>"
       ]
      },
-     "execution_count": 404,
+     "execution_count": 442,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2200,7 +2199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 405,
+   "execution_count": 443,
    "metadata": {},
    "outputs": [
     {
@@ -2291,10 +2290,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x292248d30>"
+       "<matplotlib.legend.Legend at 0x15b3b8df0>"
       ]
      },
-     "execution_count": 405,
+     "execution_count": 443,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2341,7 +2340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 406,
+   "execution_count": 444,
    "metadata": {},
    "outputs": [
     {
@@ -2492,7 +2491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 407,
+   "execution_count": 445,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2517,7 +2516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 408,
+   "execution_count": 446,
    "metadata": {},
    "outputs": [
     {
@@ -2605,10 +2604,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x17f17fbb0>"
+       "<matplotlib.legend.Legend at 0x2929d1390>"
       ]
      },
-     "execution_count": 408,
+     "execution_count": 446,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2647,7 +2646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 409,
+   "execution_count": 447,
    "metadata": {},
    "outputs": [
     {
@@ -2756,10 +2755,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x291d6f700>"
+       "<matplotlib.legend.Legend at 0x292932230>"
       ]
      },
-     "execution_count": 409,
+     "execution_count": 447,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2800,7 +2799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 410,
+   "execution_count": 448,
    "metadata": {},
    "outputs": [
     {
@@ -2939,7 +2938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 413,
+   "execution_count": 449,
    "metadata": {},
    "outputs": [
     {
@@ -3079,7 +3078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 411,
+   "execution_count": 450,
    "metadata": {},
    "outputs": [
     {
@@ -3187,7 +3186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 412,
+   "execution_count": 451,
    "metadata": {},
    "outputs": [
     {
@@ -3225,7 +3224,7 @@
        "      <td>1.2171</td>\n",
        "      <td>1,898.7387</td>\n",
        "      <td>fxOptionRisk</td>\n",
-       "      <td>{'Fx:EUR.USD': ({'EUR': 80.8226166207, 'USD': -80.8226166207}, [])}</td>\n",
+       "      <td>{'Fx:EUR.USD': ({'USD': -119.7251593456, 'EUR': 119.7251593456}, [])}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -3233,7 +3232,7 @@
        "      <td>1.2136</td>\n",
        "      <td>-1,446.7375</td>\n",
        "      <td>fxOptionRisk</td>\n",
-       "      <td>{'Fx:EUR.USD': ({'EUR': 80.29044313275, 'USD': -80.29044313275}, [])}</td>\n",
+       "      <td>{'Fx:EUR.USD': ({'USD': -118.2537680016, 'EUR': 118.2537680016}, [])}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -3241,7 +3240,7 @@
        "      <td>1.2046</td>\n",
        "      <td>-9,158.1990</td>\n",
        "      <td>fxOptionRisk</td>\n",
-       "      <td>{'Fx:EUR.USD': ({'EUR': 77.7238557231, 'USD': -77.7238557231}, [])}</td>\n",
+       "      <td>{'Fx:EUR.USD': ({'USD': -112.7820739617, 'EUR': 112.7820739617}, [])}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -3249,7 +3248,7 @@
        "      <td>1.2120</td>\n",
        "      <td>-3,964.5033</td>\n",
        "      <td>fxOptionRisk</td>\n",
-       "      <td>{'Fx:EUR.USD': ({'EUR': 80.5824269881, 'USD': -80.5824269881}, [])}</td>\n",
+       "      <td>{'Fx:EUR.USD': ({'USD': -118.37107132405, 'EUR': 118.37107132405}, [])}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -3257,7 +3256,7 @@
        "      <td>1.2119</td>\n",
        "      <td>-4,771.6965</td>\n",
        "      <td>fxOptionRisk</td>\n",
-       "      <td>{'Fx:EUR.USD': ({'EUR': 81.06882225565, 'USD': -81.06882225565}, [])}</td>\n",
+       "      <td>{'Fx:EUR.USD': ({'USD': -119.06590692375, 'EUR': 119.06590692375}, [])}</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -3278,12 +3277,12 @@
        "3  fxOptionRisk   \n",
        "4  fxOptionRisk   \n",
        "\n",
-       "                                    Sum(Risk/Fx/Delta/Central/PointWise)  \n",
-       "0    {'Fx:EUR.USD': ({'EUR': 80.8226166207, 'USD': -80.8226166207}, [])}  \n",
-       "1  {'Fx:EUR.USD': ({'EUR': 80.29044313275, 'USD': -80.29044313275}, [])}  \n",
-       "2    {'Fx:EUR.USD': ({'EUR': 77.7238557231, 'USD': -77.7238557231}, [])}  \n",
-       "3    {'Fx:EUR.USD': ({'EUR': 80.5824269881, 'USD': -80.5824269881}, [])}  \n",
-       "4  {'Fx:EUR.USD': ({'EUR': 81.06882225565, 'USD': -81.06882225565}, [])}  "
+       "                                      Sum(Risk/Fx/Delta/Central/PointWise)  \n",
+       "0    {'Fx:EUR.USD': ({'USD': -119.7251593456, 'EUR': 119.7251593456}, [])}  \n",
+       "1    {'Fx:EUR.USD': ({'USD': -118.2537680016, 'EUR': 118.2537680016}, [])}  \n",
+       "2    {'Fx:EUR.USD': ({'USD': -112.7820739617, 'EUR': 112.7820739617}, [])}  \n",
+       "3  {'Fx:EUR.USD': ({'USD': -118.37107132405, 'EUR': 118.37107132405}, [])}  \n",
+       "4  {'Fx:EUR.USD': ({'USD': -119.06590692375, 'EUR': 119.06590692375}, [])}  "
       ]
      },
      "metadata": {},
